# lerobot-pick-n-place

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: c-cpp.yml
calibration/: calculate_joint_limits.py  lerobot_calibration.json
ros_ws/src/feetech_ros2_driver/include/feetech_ros2_driver/: feetech_ros2_driver.hpp
ros_ws/src/feetech_ros2_driver/src/: feetech_ros2_driver.cpp
ros_ws/src/lerobot_control/: CMakeLists.txt  package.xml
ros_ws/src/lerobot_control/config/: lerobot_controllers.yaml
ros_ws/src/lerobot_control/launch/: controller.launch.py  moveit.launch.py
ros_ws/src/lerobot_description/: CMakeLists.txt  package.xml
ros_ws/src/lerobot_description/launch/: display.launch.py  gazebo.launch.py
ros_ws/src/lerobot_description/urdf/: lerobot.urdf  lerobot.xacro  lerobot_gazebo.xacro  lerobot_ros2_control.xacro  test.urdf  test.urdf.xacro
ros_ws/src/lerobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros_ws/src/lerobot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  lerobot.ros2_control.xacro  lerobot.srdf  lerobot.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
ros_ws/src/lerobot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros_ws/src/lerobot_pick_n_place/: CMakeLists.txt  package.xml
ros_ws/src/lerobot_pick_n_place/config/: mission.yaml
ros_ws/src/lerobot_pick_n_place/include/lerobot_pick_n_place/: mission.hpp
ros_ws/src/lerobot_pick_n_place/src/: pick_n_place.cpp
ros_ws/src/lerobot_routine/: CMakeLists.txt  package.xml
ros_ws/src/lerobot_routine/config/: routine.yaml
ros_ws/src/lerobot_routine/include/lerobot_routine/: routine.hpp
ros_ws/src/lerobot_routine/routines/: sample.yaml
ros_ws/src/lerobot_routine/src/: run_routine.cpp  teach_routine.cpp
ros_ws/src/lerobot_teleop/: CMakeLists.txt  package.xml
ros_ws/src/lerobot_teleop/src/: teleop.cpp
